# slam_karto

./: CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  package.xml  techstack.md  techstack.yml
include/slam_karto/: graph_update.h  loop_closure_callback.h  map_alignment_tool.h
src/: graph_update.cpp  loop_closure_callback.cpp  map_alignment_tool.cpp  navigation_pauser.cpp  navigation_pauser.h  slam_karto.cpp  spa_solver.cpp  spa_solver.h
srv/: SetMapTransform.srv
test/: test_graph_update.cpp
